--- a/app/src/main/res/layout/wine_list.xml
+++ b/app/src/main/res/layout/wine_list.xml
@@ -29,25 +29,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ScrollView
-        android:id="@+id/wineListScroll"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="@color/colorWineListBackgroundLight"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHeight_min="100dp"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
+    <LinearLayout
+        android:id="@+id/mainContentLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <LinearLayout
-            android:id="@+id/wineListLayout"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/wineList"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" />
-    </ScrollView>
+            android:layout_height="match_parent"
+            android:background="@color/colorWineListBackgroundLight" />
+    </LinearLayout>
 
 
 </android.support.constraint.ConstraintLayout>
