Flesh out wine list dataset.

--- a/app/src/main/res/layout/wine_list.xml
+++ b/app/src/main/res/layout/wine_list.xml
@@ -38,8 +38,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/wineList"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/colorWineListBackgroundLight" />
+            android:layout_height="match_parent" />
     </LinearLayout>
 
 
