Updated Database with Wine props, added new db functions, and debug buttons

--- a/app/src/main/res/layout/database_entry.xml
+++ b/app/src/main/res/layout/database_entry.xml
@@ -84,6 +84,19 @@
         android:layout_alignParentStart="true"
         android:focusableInTouchMode="true" />
 
+    <EditText
+        android:id="@+id/debugField"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/editDelete"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginBottom="21dp"
+        android:focusableInTouchMode="true"
+        android:hint="Debug Field" />
+
     <Button
         android:id="@+id/returnToMain"
         android:layout_width="wrap_content"
@@ -95,4 +108,16 @@
         android:layout_marginRight="24dp"
         android:layout_marginBottom="18dp"
         android:text="Return" />
+
+    <Button
+        android:id="@+id/btnDebug"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/btnDelete"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginEnd="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginBottom="21dp"
+        android:text="Debug" />
 </RelativeLayout>
