--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -5,7 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".DetailFragment"
     android:id="@+id/detailFragment"
-    android:background="#FFFFFF">
+    android:background="#FFFFFF"
+    android:clickable="true"
+    android:elevation="20dp">
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:id="@+id/info"
