Match clickable settings to AddWineFragment

--- a/app/src/main/res/layout/wine_detail.xml
+++ b/app/src/main/res/layout/wine_detail.xml
@@ -5,7 +5,9 @@
     android:id="@+id/wineDetailContents"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF">
+    android:background="#FFFFFF"
+    android:clickable="true"
+    android:elevation="20dp">
     <!-- TODO: Update blank fragment layout -->
 
     <TextView
