--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="colorWineListBackgroundLight">#E0E0E0</color>
     <color name="colorWineListRowBackgroundDark">#CBCBCB</color>
+    <color name="gold">#FFD700</color>
 </resources>
