Add delete wine button to detail view and implement database delete.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="colorWineListBackgroundLight">#E0E0E0</color>
     <color name="colorWineListRowBackgroundDark">#CBCBCB</color>
     <color name="gold">#FFD700</color>
+    <color name="colorRed">#7D002E</color>
+    <color name="colorLighterRed">#D30000</color>
 </resources>
