--- a/app/src/main/res/layout/fragment_wine_detail.xml
+++ b/app/src/main/res/layout/fragment_wine_detail.xml
@@ -7,29 +7,48 @@
     android:layout_height="match_parent"
     android:background="#FFFFFF"
     android:clickable="true"
-    android:elevation="20dp">
+    android:elevation="20dp"
+    android:focusable="true">
     <!-- TODO: Update blank fragment layout -->
 
-    <TextView
-        android:id="@+id/info"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <RatingBar
-        android:id="@+id/ratingDetail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="158dp"
-        android:layout_marginEnd="74dp"
-        android:layout_marginRight="74dp"
-        android:numStars="5"
-        android:progressTint="@color/gold"
-        android:secondaryProgressTint="@color/gold"
-        android:stepSize="1"
-        tools:layout_editor_absoluteX="72dp"
-        tools:layout_editor_absoluteY="101dp" />
+        <TextView
+            android:id="@+id/info"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/wineDetailDeleteButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:background="@color/colorLighterRed"
+            android:onClick="onClick"
+            android:text="Delete"
+            android:textColor="@color/colorRed"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent" />
+
+        <RatingBar
+            android:id="@+id/ratingDetail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:numStars="5"
+            android:progressTint="@color/gold"
+            android:secondaryProgressTint="@color/gold"
+            android:stepSize="1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/info" />
+    </android.support.constraint.ConstraintLayout>
 
 </RelativeLayout>
