--- a/app/src/main/res/layout/fragment_wine_detail.xml
+++ b/app/src/main/res/layout/fragment_wine_detail.xml
@@ -36,19 +36,15 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent" />
 
-        <RatingBar
-            android:id="@+id/ratingDetail"
+        <Button
+            android:id="@+id/wineDetailUpdateButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:numStars="5"
-            android:progressTint="@color/gold"
-            android:secondaryProgressTint="@color/gold"
-            android:stepSize="1"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/info" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_margin="10dp"
+            android:text="Update" />
+
     </android.support.constraint.ConstraintLayout>
 
 </RelativeLayout>
